HBase Change Log


Trunk (unreleased changes)

  1. HADOOP-1384. HBase omnibus patch. (jimk, Vuk Ercegovac, and Michael Stack)