@@ -2,21 +2,38 @@
 <html>
 <head />
 <body bgcolor="white">
-Provides HBase, the <a href="http://lucene.apache.org/hadoop">Hadoop</a> simple database.
+Provides HBase, the <a href="http://lucene.apache.org/hadoop">Hadoop</a>
+simple database.
 
 <h2>Requirements</h2>
 <ul>
-<li><a href="http://lucene.apache.org/hadoop">Hadoop</a>  It has its own set of <a href="http://lucene.apache.org/hadoop/api/overview-summary.html">requirements</a> (Scroll down the page).</li>
-<li>Java 1.5.x, preferably from <a href="http://lucene.apache.org/hadoop/api/index.html">Sun</a> Set JAVA_HOME to the root of your Java installation</li>
+<li><a href="http://lucene.apache.org/hadoop">Hadoop</a>:  Hadoop has its own set of
+<a href="http://lucene.apache.org/hadoop/api/overview-summary.html">requirements</a>
+(Scroll down the page).</li>
+<li>Java 1.5.x, preferably from <a href="http://lucene.apache.org/hadoop/api/index.html">Sun</a>
+Set <code>JAVA_HOME</code> to the root of your Java installation</li>
+</ul>
 
 <h2>Getting Started</h2>
-<p>First, you need a working instance of Hadoop.  Download releases at <a href="http://www.apache.org/dyn/closer.cgi/lucene/hadoop/">Hadoop downloads</a>. 
-Unpack the release and connect to its top-level directory.  Edit the file conf/hadoop-env.sh to define at least JAVA_HOME.  Try the following command:
+<p>First, you need a working instance of Hadoop.  Download a recent release from
+<a href="http://www.apache.org/dyn/closer.cgi/lucene/hadoop/">Hadoop downloads</a>. 
+Unpack the release and connect to its top-level directory.  Edit the file
+<code>conf/hadoop-env.sh</code> to define at least <code>JAVA_HOME</code>.  Also,
+add site-particular customizations to the file <code>conf/hadoop-site.xml</code>.
+Try the following command:
 <pre>bin/hadoop
 </pre>
 This will display the documentation for the Hadoop command script.
 </p>
-<p>TODO</p>
+<p>Next, start hbase servers.  Currently each server -- the master server and the
+'slave' regionservers -- must be started manually (FIX).
+<pre>src/contrib/hbase/bin/hbase master start
+src/contrib/hbase/bin/hbase regionserver start
+</pre>
+</p>
+<p>As for hadoop, local customizations can be added to
+<code>src/contrib/hbase/conf/hbase-site.xml</code>.
+</p>
 
 <h2>Related Documentation</h2>
 
