@@ -4,3 +4,4 @@ HBase Change Log
 Trunk (unreleased changes)
 
   1. HADOOP-1384. HBase omnibus patch. (jimk, Vuk Ercegovac, and Michael Stack)
+  2. HADOOP-1402. Fix javadoc warnings in hbase contrib. (Michael Stack)
